# life-sim

./: README.md  pyproject.toml
experiments/configs/: default.toml
src/: .gitignore
src/life_sim/: __init__.py  agent.py  backend.py  config.py  grid.py  rng.py  scheduler.py  sim.py  world.py
src/life_sim/systems/: aging.py  conflict.py  disease.py  foraging.py  mortality.py  movement.py  reproduction.py  resources.py
src/life_ui/: control_panel.py  panels.py  pygame_view.py  renderer.py
tests/: test_sanity.py
